<resources>
    <string name="app_name"></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="history">একুশে ফেব্রুয়ারি ইতিহাস</string>
    <string name="book">ভাষা আন্দোলনে বই</string>
    <string name="event">একুশে ফেব্রুয়ারি ইভেন্ট</string>
    <string name="audio">একুশে ফেব্রুয়ারি গান</string>
    <string name="vedio">ভাষা আন্দোলন বিষয়ক ভিডিও</string>
    <string name="rateus">আপনার মতামত</string>
    <string name="sms">একুশে ফেব্রুয়ারি এস এম এস</string>
    <string name="title_activity_vedio_wizard">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
